--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ downloads**/**
 HTS-demo_CMU-ARCTIC-ADAPT/**
 HTS-demo_CMU-ARCTIC-ADAPT*
 demo/hts-lt/**/Makefile
+demo/**/**
+src/py/.idea/**
+prozodija.data.log*
