--- a/w.cfg
+++ b/w.cfg
@@ -1,2 +1,4 @@
 hts_demo_dir=${CURDIR}/demo/hts-w01
 prepared_data_dir=../prozodija/prepareData/prepared/women
+FRAMELEN=1100 # Frame length in point for 0.025s 
+FRAMESHIFT=220 # Frame shift in point for 0.005s 
