--- a/w02.cfg
+++ b/w02.cfg
@@ -1,2 +1,4 @@
 hts_demo_dir=${CURDIR}/demo/hts-w02
 prepared_data_dir=../prozodija/prepareData/prepared/w02
+FRAMELEN=1100 # Frame length in point for 0.025s 
+FRAMESHIFT=220 # Frame shift in point for 0.005s 
