--- a/w03.cfg
+++ b/w03.cfg
@@ -2,3 +2,5 @@ hts_demo_dir=${CURDIR}/demo/hts-w03
 prepared_data_dir=../prozodija/prepareData/prepared/w02
 SAMPFREQ=16000
 USE_A_VOCODER=1
+FRAMELEN=400 # Frame length in point 0.025s * 16000
+FRAMESHIFT=80 # Frame shift in point 0.005s * 16000
