--- a/demo/adpt-templ/Makefile.in
+++ b/demo/adpt-templ/Makefile.in
@@ -42,12 +42,12 @@
 # POSSIBILITY OF SUCH DAMAGE.                                       #
 # ----------------------------------------------------------------- #
 
-all: data voice
+all: data/.ready voice
 
-data:
+data/.ready:
 	@ (cd data ; $(MAKE) all)
 
-voice:
+voice: data/.ready
 	echo "Running a training/synthesis perl script (Training.pl) in background...."
 	@PERL@ scripts/Training.pl scripts/Config.pm > log 2>&1 &
 
@@ -67,4 +67,4 @@ distclean: clean
 	rm -f config.status
 	rm -rf autom4te.cache
 
-.PHONY: all data voice clean distclean
+.PHONY: all voice clean distclean
