Fix config on global variance

--- a/demo/adpt-templ/scripts/Config.pm.in
+++ b/demo/adpt-templ/scripts/Config.pm.in
@@ -235,7 +235,7 @@ $daem_alpha  = @DAEMALPHA@;     # schedule of updating temperature parameter for
 $pgtype     = @PGTYPE@;     # parameter generation algorithm (0 -> Cholesky, 1 -> MixHidden, 2 -> StateHidden)
 $maxEMiter  = @MAXEMITER@;  # max EM iteration
 $EMepsilon  = @EMEPSILON@;  # convergence factor for EM iteration
-$useGV      = @USEGV@;      # turn on GV
+$useHmmGV   = @USEGV@;      # turn on GV
 $maxGViter  = @MAXGVITER@;  # max GV iteration
 $GVepsilon  = @GVEPSILON@;  # convergence factor for GV iteration
 $minEucNorm = @MINEUCNORM@; # minimum Euclid norm for GV iteration
